# justworktrial

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  tasks.py
justworktrial/: celery.py  settings.py  urls.py  wsgi.py
pages/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pages/migrations/: 0001_superuser.py  0002_models.py  0003_test_data.py
postgres/: postgresql.conf
